// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a Colour Chips Component - ColourChipCollapse should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

<div
    class="MuiCollapse-container c0 MuiCollapse-hidden"
    style="min-height: 0px;"
  >
    <div
      class="MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Given a Colour Chips Component - ColourChipsContainer Given a Colour Chips Component - ColourChipsContainer with centralised theme  should render as expected 1`] = `
<DocumentFragment>
  .c0 > div:nth-child(2n) {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: 0 0.5rem 0 0.5rem;
  cursor: pointer;
}

.c0 > div:nth-child(2n) > button {
  border: 0;
  padding: 0;
  background: none;
  margin-right: 0.5rem;
  color: #257f39;
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
  margin-right: 0.5rem;
  font-size: 0.875rem;
  cursor: pointer;
  line-height: 1.5;
}

.c0 > div:nth-child(2n) > button > img {
  margin-left: 0.5rem;
}

@media (max-width:1023px) {
  .c0 {
    display: none;
  }
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given a Colour Chips Component - ColourChipsContainer should render as expected 1`] = `
<DocumentFragment>
  .c0 > div:nth-child(2n) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0 0.5rem 0 0.5rem;
  cursor: pointer;
}

.c0 > div:nth-child(2n) > button {
  border: 0;
  padding: 0;
  background: none;
  margin-right: 0.5rem;
  color: #257f39;
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
  margin-right: 0.5rem;
  font-size: 0.875rem;
  cursor: pointer;
  line-height: 1.5;
}

.c0 > div:nth-child(2n) > button > img {
  margin-left: 0.5rem;
}

@media (max-width:1023px) {
  .c0 {
    display: none;
  }
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given a Colour Chips Component - ColourChipsList should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  overflow: hidden;
  max-width: 13.5rem;
  margin: 0;
}

.c0 > li:nth-child(9n) {
  margin-right: 0;
}

<ul
    class="c0"
  />
</DocumentFragment>
`;
